--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "connect-flash": "^0.1.1",
+    "dompurify": "^2.3.6",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
+    "jsdom": "^19.0.0",
+    "marked": "^4.0.14",
+    "method-override": "^3.0.0",
     "mongoose": "^6.2.1",
     "multer": "^1.4.4",
+    "parse": "^3.4.1",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
