defined engine values

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "devStart": "nodemon server.js",
     "start": "node server.js"
   },
+  "engines": {
+    "node": "v16.13.2",
+    "npm": "8.1.2"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
